--- a/i/app1.1.html
+++ b/i/app1.1.html
@@ -15,27 +15,32 @@ body { background-color: #fff; color: #000; padding: 0; margin: 0; }
   <ol>
     <li>
       <img src="/img/app1/flower-729514_1280.jpg">
-      <div class="ism-caption ism-caption-0">Africa<br><br>What to Do: Go on a safari in Kenya, explore Morocco's deserts, hike Mount Kilimanjaro, or relax on the beaches of Zanzibar.</div>
+      <div class="ism-caption ism-caption-0">Asia<br><br>
+        Visit Thailand's temples, trek in the Himalayas, enjoy cherry blossoms in Japan, or island-hop in the Philippines.</div>
     </li>
     <li>
       <img src="/img/app1/slides/beautiful-701678_1280.jpg">
-      <div class="ism-caption ism-caption-0">Europe<br><br>What to Do: Visit historical landmarks like the Colosseum in Italy, explore museums in Paris, ski in the Alps, or cruise the Mediterranean.</div>
+      <div class="ism-caption ism-caption-0">Europe<br><br>
+       Tour historic cities like Rome and Paris, ski the Alps, cruise the Greek Islands, or explore Iceland’s natural wonders.</div>
     </li>
     <li>
       <img src="/img/app1/slides/summer-192179_1280.jpg">
-      <div class="ism-caption ism-caption-0">North America<br><br>What to Do: Road trip across the USA, explore Canada's national parks, relax on Caribbean beaches, or visit Mexico's ancient ruins.<br></div>
+      <div class="ism-caption ism-caption-0">North America<br><br>
+       Visit national parks like Yellowstone, enjoy beach vacations in the Caribbean, explore New York City, or road-trip across Canada.</div>
     </li>
     <li>
       <img src="/img/app1/slides/city-690332_1280.jpg">
-      <div class="ism-caption ism-caption-0">South America<br><br>What to Do: Hike to Machu Picchu in Peru, explore the Amazon rainforest, dance the tango in Argentina, or enjoy Brazil's Carnival.</div>
+      <div class="ism-caption ism-caption-0">South America<br><br>
+        See the Amazon Rainforest, hike to Machu Picchu, explore Patagonia, or relax on Brazil's famous beaches.</div>
     </li>
     <li>
       <img src="/img/app1/slides/soldier-708711_1280.jpg">
-      <div class="ism-caption ism-caption-0">Africa<br><br>What to Do: Go on a safari in Kenya, explore Morocco's deserts, hike Mount Kilimanjaro, or relax on the beaches of Zanzibar.</div>
+      <div class="ism-caption ism-caption-0">Africa<br><br>
+      Go on a safari in Kenya, explore the deserts of Morocco, hike Mount Kilimanjaro, or relax on Zanzibar's beaches.</div>
     </li>
     <li>
       <img src="/img/app1/slides/pier-569314_1280.jpg">
-      <div class="ism-caption ism-caption-0">Australia (Oceania)<br><br>What to Do: Dive in the Great Barrier Reef, visit Sydney's landmarks, explore New Zealand's fjords, or relax on the Pacific Islands' beaches.</div>
+      <div class="ism-caption ism-caption-0">Australia (Oceania)<br><br>Dive the Great Barrier Reef, explore New Zealand’s landscapes, relax on Fiji's beaches, or visit Sydney’s iconic landmarks.</div>
     </li>
   </ol>
 </div>
