--- a/i/app4.html
+++ b/i/app4.html
@@ -1,4 +1,5 @@
 <div class="table_component" role="region" tabindex="0">
+    <h2 class="text-center mb-5">Save Money buy Holiday Ownership</h2>
 <table class="table"> <!-- Only default Bootstrap table class applied -->
     <thead>
         <tr>
