--- a/index.1.html
+++ b/index.1.html
@@ -31,13 +31,14 @@
 </head>
 <body>
     <div id="start"></div>
-    <div id="app1"></div>
+    <div><i-slide src="/i/app1.1.html"></i-slide></div>
     <div id="app2"></div>
     <div id="app3"></div>
     <div id="app4"></div>
     <div id="app5"></div>
     <div id="app6"></div>
     <div id="finish"></div>
+    <script src="https://w3c.github.io/i-slide/i-slide.js" type="module"></script>
     <script src="/js/ism-2.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
