--- a/i/app1.1.html
+++ b/i/app1.1.html
@@ -1,4 +1,5 @@
-
+<link rel="stylesheet" href="/css/my-slider.css"/>
+<script src="/js/ism-2.2.min.js"></script>
 <style>
 body { background-color: #fff; color: #000; padding: 0; margin: 0; }
 .container { width: 900px; margin: auto; padding-top: 1em; }
