--- a/index.1.html
+++ b/index.1.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div id="start"></div>
-    <div><i-slide src="/i/app1.1.html"></i-slide></div>
+    <div id="app1"></div>
     <div id="app2"></div>
     <div id="app3"></div>
     <div id="app4"></div>
