--- a/index.1.html
+++ b/index.1.html
@@ -32,7 +32,7 @@
 <body>
     <div id="start"></div>
     <!--<div id="app1"></div>-->
-    <object type="text/html" data="i/app1.1.html" width="auto" height="auto"></object>
+    <object type="text/html" data="i/app1.1.html" width="600" height="300"></object>
     <div id="app2"></div>
     <div id="app3"></div>
     <div id="app4"></div>
