--- a/index.1.html
+++ b/index.1.html
@@ -32,7 +32,10 @@
 <body>
     <div id="start"></div>
     <!--<div id="app1"></div>-->
-    <object type="text/html" data="i/app1.1.html"></object>
+    <div class="responsive-object">
+        <object type="text/html" data="i/app1.1.html">
+            Your browser does not support embedded HTML.
+        </object>
     <div id="app2"></div>
     <div id="app3"></div>
     <div id="app4"></div>
