--- a/i/app1.1.html
+++ b/i/app1.1.html
@@ -1,39 +1,87 @@
-<link rel="stylesheet" href="/css/my-slider.css"/>
-<script src="/js/ism-2.2.min.js"></script>
-<style>
-body { background-color: #fff; color: #000; padding: 0; margin: 0; }
-.container { width: 900px; margin: auto; padding-top: 1em; }
-.container .ism-slider { margin-left: auto; margin-right: auto; }
-</style>
-<div class="ism-slider" data-radio_type="thumbnail" id="continents">
-  <ol>
-    <li>
-      <img src="/img/app1/flower-729514_1280.jpg">
-      <div class="ism-caption ism-caption-0">Asia<br><br>
-        Visit Thailand's temples, trek in the Himalayas, enjoy cherry blossoms in Japan, or island-hop in the Philippines.</div>
-    </li>
-    <li>
-      <img src="/img/app1/beautiful-701678_1280.jpg">
-      <div class="ism-caption ism-caption-0">Europe<br><br>
-       Tour historic cities like Rome and Paris, ski the Alps, cruise the Greek Islands, or explore Iceland’s natural wonders.</div>
-    </li>
-    <li>
-      <img src="/img/app1/summer-192179_1280.jpg">
-      <div class="ism-caption ism-caption-0">North America<br><br>
-       Visit national parks like Yellowstone, enjoy beach vacations in the Caribbean, explore New York City, or road-trip across Canada.</div>
-    </li>
-    <li>
-      <img src="/img/app1/city-690332_1280.jpg">
-      <div class="ism-caption ism-caption-0">South America<br><br>
-        See the Amazon Rainforest, hike to Machu Picchu, explore Patagonia, or relax on Brazil's famous beaches.</div>
-    </li>
-    <li>
-      <img src="/img/app1/soldier-708711_1280.jpg">
-      <div class="ism-caption ism-caption-0">Africa<br><br>
-      Go on a safari in Kenya, explore the deserts of Morocco, hike Mount Kilimanjaro, or relax on Zanzibar's beaches.</div>
-    </li>
-    <li>
-      <img src="/img/app1/pier-569314_1280.jpg">
-      <div class="ism-caption ism-caption-0">Australia (Oceania)<br><br>Dive the Great Barrier Reef, explore New Zealand’s landscapes, relax on Fiji's beaches, or visit Sydney’s iconic landmarks.</div>
-    </li>
-  </ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/my-slider.css"/>
+    <script src="/js/ism-2.2.min.js"></script>
+    <style>
+        body { 
+            background-color: #fff; 
+            color: #000; 
+            padding: 0; 
+            margin: 0; 
+        }
+        .container { 
+            width: 100%; /* Full width for responsiveness */
+            max-width: 900px; /* Maximum width for larger screens */
+            margin: auto; 
+            padding-top: 1em; 
+        }
+        .ism-slider { 
+            margin-left: auto; 
+            margin-right: auto; 
+        }
+        /* Responsive images */
+        .ism-slider img {
+            width: 100%; /* Make images responsive */
+            height: auto; /* Maintain aspect ratio */
+        }
+        /* Captions styling */
+        .ism-caption {
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+            color: #fff; /* White text for better contrast */
+            padding: 1em; 
+            border-radius: 5px; /* Rounded corners */
+            position: absolute; /* Position captions over images */
+            bottom: 0; /* Align to the bottom */
+            left: 0; 
+            right: 0; /* Full width */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="ism-slider" data-radio_type="thumbnail" id="continents">
+            <ol>
+                <li>
+                    <img src="/img/app1/flower-729514_1280.jpg" alt="Asia">
+                    <div class="ism-caption ism-caption-0">Asia<br><br>
+                        Visit Thailand's temples, trek in the Himalayas, enjoy cherry blossoms in Japan, or island-hop in the Philippines.
+                    </div>
+                </li>
+                <li>
+                    <img src="/img/app1/beautiful-701678_1280.jpg" alt="Europe">
+                    <div class="ism-caption ism-caption-0">Europe<br><br>
+                        Tour historic cities like Rome and Paris, ski the Alps, cruise the Greek Islands, or explore Iceland’s natural wonders.
+                    </div>
+                </li>
+                <li>
+                    <img src="/img/app1/summer-192179_1280.jpg" alt="North America">
+                    <div class="ism-caption ism-caption-0">North America<br><br>
+                        Visit national parks like Yellowstone, enjoy beach vacations in the Caribbean, explore New York City, or road-trip across Canada.
+                    </div>
+                </li>
+                <li>
+                    <img src="/img/app1/city-690332_1280.jpg" alt="South America">
+                    <div class="ism-caption ism-caption-0">South America<br><br>
+                        See the Amazon Rainforest, hike to Machu Picchu, explore Patagonia, or relax on Brazil's famous beaches.
+                    </div>
+                </li>
+                <li>
+                    <img src="/img/app1/soldier-708711_1280.jpg" alt="Africa">
+                    <div class="ism-caption ism-caption-0">Africa<br><br>
+                        Go on a safari in Kenya, explore the deserts of Morocco, hike Mount Kilimanjaro, or relax on Zanzibar's beaches.
+                    </div>
+                </li>
+                <li>
+                    <img src="/img/app1/pier-569314_1280.jpg" alt="Australia (Oceania)">
+                    <div class="ism-caption ism-caption-0">Australia (Oceania)<br><br>
+                        Dive the Great Barrier Reef, explore New Zealand’s landscapes, relax on Fiji's beaches, or visit Sydney’s iconic landmarks.
+                    </div>
+                </li>
+            </ol>
+        </div>
+    </div>
+</body>
+</html>
