--- a/index.1.html
+++ b/index.1.html
@@ -6,7 +6,8 @@
     <title>Holiday Ownership Presentation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@700&display=swap" rel="stylesheet">
-    <link href="https://myslides.github.io/css/styleone.css" rel="stylesheet">
+    <link href="/css/styleone.css" rel="stylesheet">
+    <link href="/css/pureslide.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/my-slider.css"/>
     <script>
         function loadHTML() {
@@ -31,41 +32,7 @@
 </head>
 <body>
     <div id="start"></div>
-    <!--<div id="app1"></div>
-   <div class="ism-slider" data-radio_type="thumbnail" id="continents">
-  <ol>
-    <li>
-      <img src="/img/app1/flower-729514_1280.jpg">
-      <div class="ism-caption ism-caption-0">Asia<br><br>
-        Visit Thailand's temples, trek in the Himalayas, enjoy cherry blossoms in Japan, or island-hop in the Philippines.</div>
-    </li>
-    <li>
-      <img src="/img/app1/beautiful-701678_1280.jpg">
-      <div class="ism-caption ism-caption-0">Europe<br><br>
-       Tour historic cities like Rome and Paris, ski the Alps, cruise the Greek Islands, or explore Iceland’s natural wonders.</div>
-    </li>
-    <li>
-      <img src="/img/app1/summer-192179_1280.jpg">
-      <div class="ism-caption ism-caption-0">North America<br><br>
-       Visit national parks like Yellowstone, enjoy beach vacations in the Caribbean, explore New York City, or road-trip across Canada.</div>
-    </li>
-    <li>
-      <img src="/img/app1/city-690332_1280.jpg">
-      <div class="ism-caption ism-caption-0">South America<br><br>
-        See the Amazon Rainforest, hike to Machu Picchu, explore Patagonia, or relax on Brazil's famous beaches.</div>
-    </li>
-    <li>
-      <img src="/img/app1/soldier-708711_1280.jpg">
-      <div class="ism-caption ism-caption-0">Africa<br><br>
-      Go on a safari in Kenya, explore the deserts of Morocco, hike Mount Kilimanjaro, or relax on Zanzibar's beaches.</div>
-    </li>
-    <li>
-      <img src="/img/app1/pier-569314_1280.jpg">
-      <div class="ism-caption ism-caption-0">Australia (Oceania)<br><br>Dive the Great Barrier Reef, explore New Zealand’s landscapes, relax on Fiji's beaches, or visit Sydney’s iconic landmarks.</div>
-    </li>
-  </ol>
-   </div>-->
-    
+    <div id="app1"></div>
     <div id="app2"></div>
     <div id="app3"></div>
     <div id="app4"></div>
