--- a/test.html
+++ b/test.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="css/tstyles.css">
 </head>
 <body>
-    <nav class="navbar bg-gray-800 text-white p-4 sticky top-0">Speed Test</nav>
+    <nav class="navbar bg-gradient-to-r from-blue-500 to-purple-600 text-white p-4 sticky top-0 shadow-lg">Speed Test</nav>
 
-    <main class="flex flex-col items-center justify-center flex-grow">
-        <h1 class="text-2xl mb-4">Internet Speed Test</h1>
-        <button id="startTest" class="btn btn-blue mb-4">Start Test</button>
-        <div id="results" class="hidden text-center">
-            <div class="circle bg-gray-200 border-4 border-gray-400 rounded-full w-32 h-32 flex items-center justify-center relative">
+    <main class="flex flex-col items-center justify-center flex-grow text-center text-white">
+        <h1 class="text-3xl mb-6 font-bold">Internet Speed Test</h1>
+        <button id="startTest" class="btn btn-green mb-6">Start Test</button>
+        <div id="results" class="hidden">
+            <div class="circle bg-gray-800 border-4 border-gray-600 rounded-full w-32 h-32 flex items-center justify-center relative">
                 <div id="downloadResult" class="text-2xl transform transition-transform duration-500">↓</div>
                 <div id="uploadResult" class="text-2xl transform transition-transform duration-500">↑</div>
             </div>
-            <p id="averageResult" class="mt-4"></p>
+            <p id="averageResult" class="mt-4 text-lg"></p>
         </div>
     </main>
 
-    <footer class="footer bg-gray-800 text-white p-4 sticky bottom-0">© 2024 Speed Test Inc.</footer>
+    <footer class="footer bg-gradient-to-r from-blue-500 to-purple-600 text-white p-4 sticky bottom-0">© 2024 Speed Test Inc.</footer>
 
     <script src="js/tscript.js"></script>
 </body>
